# gbchallenge

./: .env -template  .env-template  .gitignore  Dockerfile  case1.drawio  docker-compose.yaml  pyproject.toml  readme.md
app/: connection.py  model.py  schemas.py  spotify.py  truncate_tables.py
queries/: sales_by_ano_and_mes.sql  sales_by_linha_ano_mes.sql  sales_by_linha_ano_mes_.sql  sales_by_marca_and_linha.sql  sales_by_marca_ano_and_mes.sql
scripts/: create_tables.py  drop_tables.py  etl.py  get_podcasts.py  load_data.py
tests/quality/: conftest.py  exceptions.py  test_flake8.py
