
[tool.poetry]
name = "gb-challenge"
version = "0.1.0"
description = ""
authors = ["Jailson Boa Morte <jailsonboamorte@gmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.28.2"
mysql-connector-python= "8.0.32"
pandas="1.5.3"


[tool.poetry.dev-dependencies]
pytest = "^7"
flake8 = ""
