
[tool.poetry]
name = "gb-challenge"
version = "0.1.0"
description = ""
authors = ["Jailson Boa Morte <jailsonboamorte@gmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.28.2"
pandas="1.5.3"
openpyxl="3.1.1"
SQLAlchemy="2.0.5"
pymysql="1.0.2"


[tool.poetry.dev-dependencies]
pytest = "^7"
flake8 = ""
